# trt-sahi-yolo

./: .gitignore  CMakeLists.txt  DEPENDENCIES.md  Makefile  WORK_DONE.md
cmake/: detect_cuda_arch.cmake  detect_trt_version.cmake
src/: main.cpp
src/common/: draw.hpp
src/examples/dfine/: dfine.cpp
src/examples/yolo11/: yolo11.cpp
src/kernels/: decode.cu  decode.cuh  kernel_warp.cu  kernel_warp.hpp
src/trt/: infer.cpp  infer.hpp
src/trt/dfine/: dfine.cu
src/trt/yolo/: yolo11.cu
